Fix : align ment and responsive ness

--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -56,7 +56,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 6px 60px;
+  padding: 6px 25px;
   flex-wrap: wrap;
   gap: 15px;
 }
@@ -119,7 +119,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 12px 60px;
+  padding: 12px 25px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   position: sticky;
   top: 0;
@@ -263,7 +263,7 @@ body {
   display: flex;
   align-items: center;
   padding-right: 16px;
-  gap: 25px;
+  gap: 10px;
   font-size: 15px;
   color: var(--text-color);
   flex-shrink: 0;
@@ -341,7 +341,7 @@ body {
 /* --------- Category Bar --------- */
 .category-bar {
   background: #ebedf0;
-  padding: 5px 60px;
+  padding: 5px 25px;
   border-top: 1px solid var(--divider-color);
 }
 
@@ -525,10 +525,6 @@ body {
     gap: 15px;
   }
 
-  .account-section span:not(.counter-circle span) {
-    display: none;
-  }
-
   .search-section {
     display: none;
   }
@@ -570,5 +566,9 @@ body {
   .search-section-mobile {
     margin: 8px 10px;
     width: calc(100% - 20px);
+  }
+
+  .account-section span:not(.counter-circle span) {
+    display: none;
   }
 }
